Updated baseline MSE calculation

--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -7902,7 +7902,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "id": "bcad5a6d-d024-43a9-b8c4-a99f4c97adbe",
       "metadata": {
         "id": "bcad5a6d-d024-43a9-b8c4-a99f4c97adbe"
@@ -7916,33 +7916,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Establish a baseline MSE for inflation prediction\n",
-        "baseline_mse = mean_squared_error(y, np.full(len(y), np.average(y)))\n",
-        "print(f\"Mean Squared Error (baseline): {baseline_mse}\")"
-      ],
-      "metadata": {
-        "id": "KVgCktDdPYGh",
-        "outputId": "f729b674-603e-48fa-83c7-14d792aa3fa1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "KVgCktDdPYGh",
-      "execution_count": 69,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mean Squared Error (baseline): 7.4597995051241295\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "id": "0d4d8619-d0cc-40a0-a221-3ee93c2e3f6c",
       "metadata": {
         "scrolled": true,
@@ -7951,6 +7925,32 @@
       "outputs": [],
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Establish a baseline MSE for inflation prediction\n",
+        "baseline_mse = mean_squared_error(y_test, np.full(len(y_test), np.average(y_train)))\n",
+        "print(f\"Mean Squared Error (baseline): {baseline_mse}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KVgCktDdPYGh",
+        "outputId": "ff53aedb-2483-4bcf-e976-8cd6e1c0b4cf"
+      },
+      "id": "KVgCktDdPYGh",
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean Squared Error (baseline): 3.0593899482630493\n"
+          ]
+        }
       ]
     },
     {
